--- a/hw1/CSE5243_EDA_HW_Template_V2.ipynb
+++ b/hw1/CSE5243_EDA_HW_Template_V2.ipynb
@@ -973,7 +973,7 @@
   {
    "source": [
     "### Solar Radiation and Bike Rentals\n",
-    "For the last comparison, I want to see how solar radiation and bike rentals are related. I will start by getting the correlation between the two variables:\n"
+    "For this comparison, I want to see how solar radiation and bike rentals are related. I will start by getting the correlation between the two variables:\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1035,6 +1035,80 @@
    "source": [
     "#### Analysis\n",
     "In the table above, we can see that the correlation between solar radiation and the precipitation is relatively week. However, the correlation with temperature and solar radiation is strong."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Function Day and Bike Rental\n",
+    "For my last analysis, I just want to see how bike rental and functioning day relate. First, I'll analyze the correlation."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "+-------------------+-----------------+\n|                   | Functioning Day |\n+===================+=================+\n| Rented Bike Count |      0.191      |\n+-------------------+-----------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "bike, func_day = 'Rented Bike Count', 'Functioning Day'\n",
+    "df_bike_func = pd.DataFrame(data={bike:data[bike], func_day:data[func_day]})\n",
+    "corr = df_bike_func.corr()\n",
+    "table = tt.Texttable()\n",
+    "table.add_rows([['', func_day], [bike, corr[bike][func_day]]])\n",
+    "table.set_cols_align(['l', 'c'])\n",
+    "print(table.draw())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "This is a higher correlation than I anticipated, as I had assumed functioning day means true if the bike rentals are open, so I'm going to check the total bikes rented when functioning day is true and when it is false."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "+-----------------+-------------------+\n| Functioning Day | Rented Bike Count |\n+=================+===================+\n| True            |      5205554      |\n+-----------------+-------------------+\n| False           |       8208        |\n+-----------------+-------------------+\n| Percent False   |       0.158       |\n+-----------------+-------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "sums = hw1.sum_by_categories_to_dict(data, bike, func_day)\n",
+    "table = tt.Texttable()\n",
+    "table.add_rows([[func_day, bike], ['True', sums[True]], ['False', sums[False]], ['Percent False', 100 * sums[False]/sums[True]]])\n",
+    "table.set_cols_align(['l', 'c'])\n",
+    "print(table.draw())"
+   ]
+  },
+  {
+   "source": [
+    "### Analysis\n",
+    "The percent of closed days that had bikes rented out is less than 1%. This likely suggest that any entry with a bike count greater than 0 and a false value for FunctioningDay is errorneous. As a result, if we were predicting how many bikes would be rented out in a given day, we would want to remove data entries for which FunctioningDay is false."
    ],
    "cell_type": "markdown",
    "metadata": {}
