Finished sections of the hw

--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -57,10 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
     "import hw2\n",
     "\n",
     "train_data = hw2.data('altered_seoulbikedata_train.csv')\n",
@@ -71,6 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "***\n",
     "# Section: 1 - Evaluation Method\n",
     "- Define measures for evaluating the classification models you develop.  Explain why the measures you choose provide a useful view into the value and usefulness of the model you eventually chose for the company to use.  Define two types:\n",
@@ -88,11 +94,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Confusion Matrix\n",
+    "- simple representation that shows number of true positives, false positives, true negatives, and false negatives\n",
+    "- true positives and true negatives are the desired outcomes and we want these numbers to be maximized\n",
+    "- used in a wide variety of different measures\n",
+    "\n",
+    "### Accuracy\n",
+    "- just a ratio of the correct classifications to the total number of classifications\n",
+    "- can be problematic and misleading in certain instances if a large amount of the data belongs to a single class\n",
+    "\n",
+    "### Precision\n",
+    "- ratio over number of true positive classifications over the total number of predicted positive classifications (both true and false positives)\n",
+    "- gives us a better idea of how well our model performed in identifying positive cases (regardless of how much data belongs to either class)\n",
+    "\n",
+    "### Recall/Sensitivity/True Positive Rate\n",
+    "- similar to precision, but looks at actual positive classification instead\n",
+    "- recall is a ratio of number of true positive classifications to total actual positive classifications\n",
+    "\n",
+    "### Specitivity/True Negative Rate\n",
+    "- like recall, but looks at the actual negative classification\n",
+    "- ratio of number of true negatives to total actual negative classifications\n",
+    "\n",
+    "### False Positive Rate\n",
+    "- ratio of number of false positives over total number of true negatives and false positives\n",
+    "- also just (1 - specitivity) or &#945;\n",
+    "\n",
+    "### False Negative Rate\n",
+    "- ratio of number of false negatives over total number of false negatives and true positives\n",
+    "- also just (1 - sensitivity) or &#946;\n",
+    "\n",
+    "### Power\n",
+    "- same thing as recall/sensitivity\n",
+    "\n",
+    "\n",
+    "### F-measure\n",
+    "- combines precision and recall measure\n",
+    "- calculate with (2\\*precision\\*recall)/(precision+recall)\n",
+    "\n",
+    "### Type I and Type II Errors\n",
+    "- Type I error is an error in which we reject null hypothesis even though it is true (or a false positive)\n",
+    "- &#945; is the probability that we have a Type I error\n",
+    "- Type II error is where we accept a nyull hypothesis even though it is false (or a false negative)\n",
+    "- &#946; is the probability that we have a Type II error\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -105,28 +152,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Cost Matrix\n",
+    "- just gives the cost of each potential outcome (i.e., true postive, false positive, true negative, false negative)\n",
+    "- calculate total cost of model by multiplying each outcome by the cost for that outcome\n",
+    "- can be used to emphasize that some classifications are extremely unfavorable compared to others\n",
+    "- an example of this would be a self-driving care when it is stopped at a stop sign and deciding if a car is coming and it should wait\n",
+    "    - true positive is when the car decides a car is coming and a car is actually coming, true negative is when car decides a car is not coming and a car is not actually coming\n",
+    "    - in this case, a false negative would be very undesirable, as it could lead to a potential collision (e.g., car decides it is safe to move when a car is coming)\n",
+    "    - to address this, we can give a high cost to false negatives while giving a low cost to false postive (i.e., better to wait than to risk a crash)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "***\n",
     "# Section: 2 - Pre-Processing of the Dataset\n",
     "- Use the altered_seoulbikedata_train.  Split it into a Training dataset and a validation dataset.  Keep them separate and use the Training dataset for training/tuning and the validation dataset for hyperparameter tuning. Or you can use cross validation - https://scikit-learn.org/stable/modules/cross_validation.html.\n",
-    "***"
+    "***\n",
+    "\n",
+    "For my training and validation sets, I am going to use cross validation (CV) as mentioned above using SciKit Learn's [cross_val_score method](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.cross_val_score.html#sklearn.model_selection.cross_val_score). This step is done later after instantiating my classfiers. \n",
+    "\n",
+    "With this method, you can fit the data using the given classifier, training set, and target set. In addition, you specify how many folds to use as well as the evaluation method to use from [this list](https://scikit-learn.org/stable/modules/model_evaluation.html#scoring-parameter). The method returns an array with the score for each run of CV."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -137,15 +189,73 @@
     "- Review the meanings of the attributes and consider removing redundant or (likely) irrelevant attributes, combining attributes, etc., to reduce the number of attributes.\n",
     "- (You may choose to use techniques such as those you used in Homework 1 to analyze the impacts of individual attributes on the CLASS attribute, but you need not do a “deep” analysis.)\n",
     "- Describe what you chose to do (and not do), and why.\n",
-    "***"
+    "***\n",
+    "\n",
+    "### Transformations\n",
+    "- For my initial revisions, I did applied the same transformations that I used in homework 1. My transformations involved removing outliers (using 1.5xIQR method) and removing and potentially erroneous data. These revisions included:\n",
+    "    1. Identify and remove temperature outliers. For this, I took outliers in each day, as temperaure will widely vary throughout the year (e.g., temperatures in summer vs. temperatures in winter) but varies less throughout the day.\n",
+    "    2. Identify and remove dew point outliers. Even though I am removing the dew point attribute (due to its low correlation with our class attribute, IsitDay), I want to remove outliers for it because I use it to check for erroneous humidity values in the next step.\n",
+    "    3. Check for erroneous humidity outliers. To do this, I check if the recorded humidity is within a certain range of my calculate humidity. I calculate the humidity using the formula found in the function hw2.humidty in (hw2.py). If the acceptable humidity varies by &#177;5, then I will remove that data entry.\n",
+    "    4. Finally, I remove any extra/irrelevant attributes. These are attributes I found to be uncessary in predicitng IsitDay. To determine if their relevance, I took their correlation with IsitDay and reasoned with logic on whether or not they were important. The attributes I ended up removing were Visibility, Dew point temperature, Rainfall, Snowfall, Seasons, Holiday, Functioning day, and Date."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "--Transformation Summary--\n",
+      "+---------------------+-------+\n",
+      "| Elimination Cause   | Count |\n",
+      "+---------------------+-------+\n",
+      "| Temperature Outlier | 270   |\n",
+      "+---------------------+-------+\n",
+      "| Humidity Error      | 78    |\n",
+      "+---------------------+-------+\n",
+      "| Total Eliminations  | 348   |\n",
+      "+---------------------+-------+\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       Rented Bike Count  Temperature(C)  Humidity(%)  Wind speed (m/s)  \\\n",
+       "count        7010.000000     7010.000000  7010.000000       7010.000000   \n",
+       "mean          711.702282       12.894479    58.472896          1.716933   \n",
+       "std           651.263850       11.904562    20.153850          1.035290   \n",
+       "min             0.000000      -17.800000    11.000000          0.000000   \n",
+       "25%           193.000000        3.500000    43.000000          0.900000   \n",
+       "50%           509.000000       13.600000    57.000000          1.500000   \n",
+       "75%          1074.000000       22.500000    74.000000          2.300000   \n",
+       "max          3556.000000       39.400000    98.000000          7.400000   \n",
+       "\n",
+       "       Solar Radiation (MJ/m2)  \n",
+       "count              7010.000000  \n",
+       "mean                  0.567655  \n",
+       "std                   0.866163  \n",
+       "min                   0.000000  \n",
+       "25%                   0.000000  \n",
+       "50%                   0.010000  \n",
+       "75%                   0.930000  \n",
+       "max                   3.520000  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Rented Bike Count</th>\n      <th>Temperature(C)</th>\n      <th>Humidity(%)</th>\n      <th>Wind speed (m/s)</th>\n      <th>Solar Radiation (MJ/m2)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>711.702282</td>\n      <td>12.894479</td>\n      <td>58.472896</td>\n      <td>1.716933</td>\n      <td>0.567655</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>651.263850</td>\n      <td>11.904562</td>\n      <td>20.153850</td>\n      <td>1.035290</td>\n      <td>0.866163</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>-17.800000</td>\n      <td>11.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>193.000000</td>\n      <td>3.500000</td>\n      <td>43.000000</td>\n      <td>0.900000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>509.000000</td>\n      <td>13.600000</td>\n      <td>57.000000</td>\n      <td>1.500000</td>\n      <td>0.010000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>1074.000000</td>\n      <td>22.500000</td>\n      <td>74.000000</td>\n      <td>2.300000</td>\n      <td>0.930000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>3556.000000</td>\n      <td>39.400000</td>\n      <td>98.000000</td>\n      <td>7.400000</td>\n      <td>3.520000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "target = train_data['IsitDay']\n",
+    "print('--Transformation Summary--')\n",
+    "hw2.hw1_transformation(train_data)\n",
+    "train_data.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,15 +265,56 @@
     "## Section: 2.2 - Transform the attributes\n",
     "- Consider transforming the remaining attributes (e.g., one hot encoding in case python classification models does not support nomial attribute), normalizing / scaling values, encoding labels (if necessary), etc.\n",
     "- Describe what you chose to do (and not do), and why.\n",
-    "***"
+    "***\n",
+    "\n",
+    "### Additional Transformations\n",
+    "- The only additional transformation I found necessary was to normalize my data via SciKit's MinMaxScaler class.\n",
+    "- With the attributes I had leftover, I did not need to do anything like one hot encoding or encoding of labels because all values I had leftover were numerical.\n",
+    "\n",
+    "The results from scaling can be seen below. Notice how all values now range from 0 to 1 in comparison to the data printed in Section 1.2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       Rented Bike Count  Temperature(C)  Humidity(%)  Wind speed (m/s)  \\\n",
+       "count        7010.000000     7010.000000  7010.000000       7010.000000   \n",
+       "mean            0.200141        0.536617     0.545665          0.232018   \n",
+       "std             0.183145        0.208122     0.231653          0.139904   \n",
+       "min             0.000000        0.000000     0.000000          0.000000   \n",
+       "25%             0.054274        0.372378     0.367816          0.121622   \n",
+       "50%             0.143138        0.548951     0.528736          0.202703   \n",
+       "75%             0.302025        0.704545     0.724138          0.310811   \n",
+       "max             1.000000        1.000000     1.000000          1.000000   \n",
+       "\n",
+       "       Solar Radiation (MJ/m2)  \n",
+       "count              7010.000000  \n",
+       "mean                  0.161266  \n",
+       "std                   0.246069  \n",
+       "min                   0.000000  \n",
+       "25%                   0.000000  \n",
+       "50%                   0.002841  \n",
+       "75%                   0.264205  \n",
+       "max                   1.000000  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Rented Bike Count</th>\n      <th>Temperature(C)</th>\n      <th>Humidity(%)</th>\n      <th>Wind speed (m/s)</th>\n      <th>Solar Radiation (MJ/m2)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>0.200141</td>\n      <td>0.536617</td>\n      <td>0.545665</td>\n      <td>0.232018</td>\n      <td>0.161266</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.183145</td>\n      <td>0.208122</td>\n      <td>0.231653</td>\n      <td>0.139904</td>\n      <td>0.246069</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.054274</td>\n      <td>0.372378</td>\n      <td>0.367816</td>\n      <td>0.121622</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.143138</td>\n      <td>0.548951</td>\n      <td>0.528736</td>\n      <td>0.202703</td>\n      <td>0.002841</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>0.302025</td>\n      <td>0.704545</td>\n      <td>0.724138</td>\n      <td>0.310811</td>\n      <td>0.264205</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(train_data)\n",
+    "train_data = pd.DataFrame(scaler.transform(train_data), columns=train_data.columns)\n",
+    "train_data.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,15 +334,35 @@
     "## Section: 3.1 - Configure the off-the-shelf KNN classifier\n",
     "- Use the KNeighborsClassifier from the SciKit Learn library\n",
     "- Explain all setup, parameters and execution options you chose to set, and why.\n",
-    "***"
+    "***\n",
+    "\n",
+    "First we have to instantiate the KNN Classifier. All the parameters have default values, but I passed them in anyways to show which each one did.\n",
+    "\n",
+    "### Parameters\n",
+    "- n_neighbors- number of nearest neighbors to compute\n",
+    "- metric- method to use for measuring distance; acceptable values can be found [here](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.DistanceMetric.html#sklearn.neighbors.DistanceMetric) or a user-defined function can be passed in; default is Minkowski, which has the formula sum(|x - y|^p)^(1/p)\n",
+    "- p- power to use for computing Minkowski metric and refers to the *p* value in the formula above; p=1 is Manhattan distance and p=2 is Euclidean distance\n",
+    "- weights- \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-37b3c1c52a69>, line 1)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-37b3c1c52a69>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    knn_clf =\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_clf = KNeighborsClassifier(n_neighbors=5, metric=’minkowski’, p=2, weights=)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -426,9 +597,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.2 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "ac2eaa0ea0ebeafcc7822e65e46aa9d4f966f30b695406963e145ea4a91cd4fc"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -440,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.2-final"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
