almost finished KNN classifier part

--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -57,14 +57,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from statistics import mean\n",
     "\n",
     "import pandas as pd\n",
+    "import texttable as tt\n",
     "\n",
     "import hw2\n",
     "\n",
@@ -106,7 +111,7 @@
     "\n",
     "### Precision\n",
     "- ratio over number of true positive classifications over the total number of predicted positive classifications (both true and false positives)\n",
-    "- gives us a better idea of how well our model performed in identifying positive cases (regardless of how much data belongs to either class)\n",
+    "- gives us a better idea of how well our model performed in identifying true positive cases (regardless of how much data belongs to either class) and how our model does at avoiding false positives\n",
     "\n",
     "### Recall/Sensitivity/True Positive Rate\n",
     "- similar to precision, but looks at actual positive classification instead\n",
@@ -127,7 +132,6 @@
     "### Power\n",
     "- same thing as recall/sensitivity\n",
     "\n",
-    "\n",
     "### F-measure\n",
     "- combines precision and recall measure\n",
     "- calculate with (2\\*precision\\*recall)/(precision+recall)\n",
@@ -136,10 +140,23 @@
     "- Type I error is an error in which we reject null hypothesis even though it is true (or a false positive)\n",
     "- &#945; is the probability that we have a Type I error\n",
     "- Type II error is where we accept a nyull hypothesis even though it is false (or a false negative)\n",
-    "- &#946; is the probability that we have a Type II error\n"
+    "- &#946; is the probability that we have a Type II error\n",
+    "\n",
+    "### Scoring Choices\n",
+    "To evaluate my models, I chose F-measure, accuracy, recall, and precision. I chose F-measure because I think it will provide a good overview of how well my model did. Accuracy was chosen because it is straight forward and easy to compute; even though it can be misleading, I still wanted to compute it to see what it was. I chose recall and precision because those will better let me know how good my model is doing at identifying positive case. Precision here is important, as that will tell us how good our model is doing at avoiding a positive label when the label is actually negative. If our model predicts a true value of IsitDay when it is actually false, then the bike's headlights would turn off at nighttime."
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize list of evaluation methods to use later\n",
+    "scoring=['accuracy', 'f1', 'precision', 'recall']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,13 +264,12 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Rented Bike Count</th>\n      <th>Temperature(C)</th>\n      <th>Humidity(%)</th>\n      <th>Wind speed (m/s)</th>\n      <th>Solar Radiation (MJ/m2)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>711.702282</td>\n      <td>12.894479</td>\n      <td>58.472896</td>\n      <td>1.716933</td>\n      <td>0.567655</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>651.263850</td>\n      <td>11.904562</td>\n      <td>20.153850</td>\n      <td>1.035290</td>\n      <td>0.866163</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>-17.800000</td>\n      <td>11.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>193.000000</td>\n      <td>3.500000</td>\n      <td>43.000000</td>\n      <td>0.900000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>509.000000</td>\n      <td>13.600000</td>\n      <td>57.000000</td>\n      <td>1.500000</td>\n      <td>0.010000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>1074.000000</td>\n      <td>22.500000</td>\n      <td>74.000000</td>\n      <td>2.300000</td>\n      <td>0.930000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>3556.000000</td>\n      <td>39.400000</td>\n      <td>98.000000</td>\n      <td>7.400000</td>\n      <td>3.520000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 3
     }
    ],
    "source": [
-    "target = train_data['IsitDay']\n",
     "print('--Transformation Summary--')\n",
-    "hw2.hw1_transformation(train_data)\n",
+    "target = hw2.hw1_transformation(train_data)\n",
     "train_data.describe()"
    ]
   },
@@ -276,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +322,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Rented Bike Count</th>\n      <th>Temperature(C)</th>\n      <th>Humidity(%)</th>\n      <th>Wind speed (m/s)</th>\n      <th>Solar Radiation (MJ/m2)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>0.200141</td>\n      <td>0.536617</td>\n      <td>0.545665</td>\n      <td>0.232018</td>\n      <td>0.161266</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.183145</td>\n      <td>0.208122</td>\n      <td>0.231653</td>\n      <td>0.139904</td>\n      <td>0.246069</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.054274</td>\n      <td>0.372378</td>\n      <td>0.367816</td>\n      <td>0.121622</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.143138</td>\n      <td>0.548951</td>\n      <td>0.528736</td>\n      <td>0.202703</td>\n      <td>0.002841</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>0.302025</td>\n      <td>0.704545</td>\n      <td>0.724138</td>\n      <td>0.310811</td>\n      <td>0.264205</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 4
     }
    ],
    "source": [
@@ -336,32 +352,37 @@
     "- Explain all setup, parameters and execution options you chose to set, and why.\n",
     "***\n",
     "\n",
-    "First we have to instantiate the KNN Classifier. All the parameters have default values, but I passed them in anyways to show which each one did.\n",
+    "The definition for SciKit's KNeighborsClassifier class is:\n",
     "\n",
-    "### Parameters\n",
-    "- n_neighbors- number of nearest neighbors to compute\n",
-    "- metric- method to use for measuring distance; acceptable values can be found [here](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.DistanceMetric.html#sklearn.neighbors.DistanceMetric) or a user-defined function can be passed in; default is Minkowski, which has the formula sum(|x - y|^p)^(1/p)\n",
+    "```\n",
+    "KNeighborsClassifier(n_neighbors=5, *, weights='uniform', algorithm='auto', leaf_size=30, p=2, metric='minkowski', metric_params=None, n_jobs=None, **kwargs)\n",
+    "```\n",
+    "\n",
+    "The parameters that are important or that I'll be changing are described below:\n",
+    "- n_neighbors- number of nearest neighbors to compute; default = 5\n",
+    "- weights- weighting function to use when looking at points in neighborhood; default = 'uniform' but 'distance' or a user defined weighting function can also be passed\n",
+    "- algorithm- algorithm used to compute nearest neighbors; default = 'auto' but other options include 'ball_tree', 'kd_tree', or 'brute'\n",
+    "- metric- method to use for measuring distance; acceptable values can be found [here](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.DistanceMetric.html#sklearn.neighbors.DistanceMetric) or a user-defined function can be passed in; default = Minkowski, which has the formula sum(|x - y|^p)^(1/p)\n",
     "- p- power to use for computing Minkowski metric and refers to the *p* value in the formula above; p=1 is Manhattan distance and p=2 is Euclidean distance\n",
-    "- weights- \n",
-    "\n"
+    "- metric_params- additionaly parameters for the metric formula passed in\n",
+    "\n",
+    "### KNN Instantiation\n",
+    "For my KNN classifier, I am going to be trying 10 different classifiers, split into two groups. Group 1 will contain 5 classifiers, look for 1 to 5 nearest neighbors, and use Manhattan distance. Group 2 will also contain 5 classfiers, look for 1 to 5 nearest neighbors, and use Euclidean distance. \n",
+    "\n",
+    "I am not quite sure where to start when choosing my value for k, so I wanted to test a considerable range of values. If I make it too small, my classifier will be too sensitive to noise points. However, if I make it too big, my classifier may find data from other classes.\n",
+    "\n",
+    "Additionally, I'll be using cross validation with SciKit's cross_val_score and cross_validate methods to train and validate my model. cross_validate is just like cross_val_score, but it allows multiple types of evaluation measures to be used. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-37b3c1c52a69>, line 1)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-37b3c1c52a69>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    knn_clf =\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "knn_clf = KNeighborsClassifier(n_neighbors=5, metric=’minkowski’, p=2, weights=)"
+    "min_neighbors, max_neighbors = 1,5\n",
+    "knn_manhat = [KNeighborsClassifier(n_neighbors=x, metric='manhattan') for x in range(min_neighbors, max_neighbors + 1)]\n",
+    "knn_euclid = [KNeighborsClassifier(n_neighbors=x, metric='euclidean') for x in range(min_neighbors, max_neighbors + 1)]"
    ]
   },
   {
@@ -377,10 +398,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "+---------------------------+----------+-----------+--------+-----------+\n| Results for Manhattan KNN |          |           |        |           |\n+===========================+==========+===========+========+===========+\n| Value of K                | Accuracy | F-measure | Recall | Precision |\n+---------------------------+----------+-----------+--------+-----------+\n| k=1                       | 0.902    | 0.889     | 0.859  | 0.922     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=2                       | 0.897    | 0.876     | 0.795  | 0.976     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=3                       | 0.916    | 0.902     | 0.852  | 0.959     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=4                       | 0.904    | 0.886     | 0.812  | 0.975     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=5                       | 0.915    | 0.901     | 0.842  | 0.970     |\n+---------------------------+----------+-----------+--------+-----------+\n+---------------------------+----------+-----------+--------+-----------+\n| Results for Euclidean KNN |          |           |        |           |\n+===========================+==========+===========+========+===========+\n| Value of K                | Accuracy | F-measure | Recall | Precision |\n+---------------------------+----------+-----------+--------+-----------+\n| k=1                       | 0.899    | 0.888     | 0.869  | 0.908     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=2                       | 0.903    | 0.885     | 0.810  | 0.975     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=3                       | 0.915    | 0.903     | 0.858  | 0.953     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=4                       | 0.907    | 0.890     | 0.819  | 0.974     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=5                       | 0.914    | 0.900     | 0.847  | 0.960     |\n+---------------------------+----------+-----------+--------+-----------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_manhat_scores = [cross_validate(estimator=knn_manhat[i], X=train_data, y=target, cv=5, scoring=scoring) for i in range(0, len(knn_manhat))]\n",
+    "knn_euclid_scores = [cross_validate(estimator=knn_euclid[i], X=train_data, y=target, cv=5, scoring=scoring) for i in range(0, len(knn_euclid))]\n",
+    "\n",
+    "table = tt.Texttable()\n",
+    "table.add_rows([['Results for Manhattan KNN', '', '', '', ''],\n",
+    "                ['Value of K', 'Accuracy', 'F-measure', 'Recall', 'Precision']\n",
+    "])\n",
+    "\n",
+    "for i in range(0, len(knn_manhat_scores)):\n",
+    "    table.add_row( ['k=' + str(i+1), mean(knn_manhat_scores[i]['test_accuracy']), mean(knn_manhat_scores[i]['test_f1']), mean(knn_manhat_scores[i]['test_recall']), mean(knn_manhat_scores[i]['test_precision']) ])\n",
+    "print(table.draw())\n",
+    "\n",
+    "table = tt.Texttable()\n",
+    "table.add_rows([['Results for Euclidean KNN', '', '', '', ''],\n",
+    "                ['Value of K', 'Accuracy', 'F-measure', 'Recall', 'Precision']\n",
+    "])\n",
+    "for i in range(0, len(knn_euclid_scores)):\n",
+    "    table.add_row( ['k=' + str(i+1), mean(knn_euclid_scores[i]['test_accuracy']), mean(knn_euclid_scores[i]['test_f1']), mean(knn_euclid_scores[i]['test_recall']), mean(knn_euclid_scores[i]['test_precision']) ])\n",
+    "print(table.draw())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,7 +446,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Overall, my KNN classsifier produced excellent results."
+   ]
   },
   {
    "cell_type": "markdown",
