--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.model_selection import cross_val_score, cross_validate, cross_val_predict\n",
+    "from sklearn.metrics import make_scorer, confusion_matrix\n",
     "from sklearn.pipeline import Pipeline\n",
     "from statistics import mean\n",
     "\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,10 +177,31 @@
     "- an example of this would be a self-driving care when it is stopped at a stop sign and deciding if a car is coming and it should wait\n",
     "    - true positive is when the car decides a car is coming and a car is actually coming, true negative is when car decides a car is not coming and a car is not actually coming\n",
     "    - in this case, a false negative would be very undesirable, as it could lead to a potential collision (e.g., car decides it is safe to move when a car is coming)\n",
-    "    - to address this, we can give a high cost to false negatives while giving a low cost to false postive (i.e., better to wait than to risk a crash)"
+    "    - to address this, we can give a high cost to false negatives while giving a low cost to false postive (i.e., better to wait than to risk a crash)\n",
+    "\n",
+    "Below, I create a function to compute the cost of a single prediction:"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_cost(actual, predict):\n",
+    "    if actual:\n",
+    "        return 0 if predict else 1\n",
+    "    if not actual:\n",
+    "        return 10 if predict else 0\n",
+    "\n",
+    "def compute_cost(conf_matrix):\n",
+    "    tp_cost, fp_cost, tn_cost, fn_cost = 0, 10, 0, 1\n",
+    "    return conf_matrix[0,0] * tp_cost + conf_matrix[0,1] * fn_cost + conf_matrix[1,0] * fp_cost + conf_matrix[1,1] * tn_cost\n",
+    "    \n",
+    "cost_scorer = make_scorer(compute_cost, greater_is_better=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -264,12 +285,13 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Rented Bike Count</th>\n      <th>Temperature(C)</th>\n      <th>Humidity(%)</th>\n      <th>Wind speed (m/s)</th>\n      <th>Solar Radiation (MJ/m2)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>711.702282</td>\n      <td>12.894479</td>\n      <td>58.472896</td>\n      <td>1.716933</td>\n      <td>0.567655</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>651.263850</td>\n      <td>11.904562</td>\n      <td>20.153850</td>\n      <td>1.035290</td>\n      <td>0.866163</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>-17.800000</td>\n      <td>11.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>193.000000</td>\n      <td>3.500000</td>\n      <td>43.000000</td>\n      <td>0.900000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>509.000000</td>\n      <td>13.600000</td>\n      <td>57.000000</td>\n      <td>1.500000</td>\n      <td>0.010000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>1074.000000</td>\n      <td>22.500000</td>\n      <td>74.000000</td>\n      <td>2.300000</td>\n      <td>0.930000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>3556.000000</td>\n      <td>39.400000</td>\n      <td>98.000000</td>\n      <td>7.400000</td>\n      <td>3.520000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 16
     }
    ],
    "source": [
     "print('--Transformation Summary--')\n",
     "target = hw2.hw1_transformation(train_data)\n",
+    "test_target = hw2.remove_cols(test_data)\n",
     "train_data.describe()"
    ]
   },
@@ -292,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +344,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Rented Bike Count</th>\n      <th>Temperature(C)</th>\n      <th>Humidity(%)</th>\n      <th>Wind speed (m/s)</th>\n      <th>Solar Radiation (MJ/m2)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n      <td>7010.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>0.200141</td>\n      <td>0.536617</td>\n      <td>0.545665</td>\n      <td>0.232018</td>\n      <td>0.161266</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.183145</td>\n      <td>0.208122</td>\n      <td>0.231653</td>\n      <td>0.139904</td>\n      <td>0.246069</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.054274</td>\n      <td>0.372378</td>\n      <td>0.367816</td>\n      <td>0.121622</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.143138</td>\n      <td>0.548951</td>\n      <td>0.528736</td>\n      <td>0.202703</td>\n      <td>0.002841</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>0.302025</td>\n      <td>0.704545</td>\n      <td>0.724138</td>\n      <td>0.310811</td>\n      <td>0.264205</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 17
     }
    ],
    "source": [
@@ -376,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,36 +420,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "+---------------------------+----------+-----------+--------+-----------+\n| Results for Manhattan KNN |          |           |        |           |\n+===========================+==========+===========+========+===========+\n| Value of K                | Accuracy | F-measure | Recall | Precision |\n+---------------------------+----------+-----------+--------+-----------+\n| k=1                       | 0.902    | 0.889     | 0.859  | 0.922     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=2                       | 0.897    | 0.876     | 0.795  | 0.976     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=3                       | 0.916    | 0.902     | 0.852  | 0.959     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=4                       | 0.904    | 0.886     | 0.812  | 0.975     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=5                       | 0.915    | 0.901     | 0.842  | 0.970     |\n+---------------------------+----------+-----------+--------+-----------+\n+---------------------------+----------+-----------+--------+-----------+\n| Results for Euclidean KNN |          |           |        |           |\n+===========================+==========+===========+========+===========+\n| Value of K                | Accuracy | F-measure | Recall | Precision |\n+---------------------------+----------+-----------+--------+-----------+\n| k=1                       | 0.899    | 0.888     | 0.869  | 0.908     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=2                       | 0.903    | 0.885     | 0.810  | 0.975     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=3                       | 0.915    | 0.903     | 0.858  | 0.953     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=4                       | 0.907    | 0.890     | 0.819  | 0.974     |\n+---------------------------+----------+-----------+--------+-----------+\n| k=5                       | 0.914    | 0.900     | 0.847  | 0.960     |\n+---------------------------+----------+-----------+--------+-----------+\n"
+      "+---------------------------+----------+-----------+--------+-----------+------+\n| Results for Manhattan KNN |          |           |        |           |      |\n+===========================+==========+===========+========+===========+======+\n| Value of K                | Accuracy | F-measure | Recall | Precision | Cost |\n+---------------------------+----------+-----------+--------+-----------+------+\n| k=1                       | 0.902    | 0.889     | 0.859  | 0.922     | 4774 |\n+---------------------------+----------+-----------+--------+-----------+------+\n| k=2                       | 0.897    | 0.876     | 0.795  | 0.976     | 6642 |\n+---------------------------+----------+-----------+--------+-----------+------+\n| k=3                       | 0.916    | 0.902     | 0.852  | 0.959     | 4876 |\n+---------------------------+----------+-----------+--------+-----------+------+\n| k=4                       | 0.904    | 0.886     | 0.812  | 0.975     | 6116 |\n+---------------------------+----------+-----------+--------+-----------+------+\n| k=5                       | 0.915    | 0.901     | 0.842  | 0.970     | 5174 |\n+---------------------------+----------+-----------+--------+-----------+------+\n\n+---------------------------+----------+-----------+--------+-----------+------+\n| Results for Euclidean KNN |          |           |        |           |      |\n+===========================+==========+===========+========+===========+======+\n| Value of K                | Accuracy | F-measure | Recall | Precision | Cost |\n+---------------------------+----------+-----------+--------+-----------+------+\n| k=1                       | 0.899    | 0.888     | 0.869  | 0.908     | 4494 |\n+---------------------------+----------+-----------+--------+-----------+------+\n| k=2                       | 0.903    | 0.885     | 0.810  | 0.975     | 6186 |\n+---------------------------+----------+-----------+--------+-----------+------+\n| k=3                       | 0.915    | 0.903     | 0.858  | 0.953     | 4715 |\n+---------------------------+----------+-----------+--------+-----------+------+\n| k=4                       | 0.907    | 0.890     | 0.819  | 0.974     | 5881 |\n+---------------------------+----------+-----------+--------+-----------+------+\n| k=5                       | 0.914    | 0.900     | 0.847  | 0.960     | 5033 |\n+---------------------------+----------+-----------+--------+-----------+------+\n"
      ]
     }
    ],
    "source": [
     "knn_manhat_scores = [cross_validate(estimator=knn_manhat[i], X=train_data, y=target, cv=5, scoring=scoring) for i in range(0, len(knn_manhat))]\n",
+    "knn_manhat_cost_scores = [compute_cost(confusion_matrix(target, cross_val_predict(knn_manhat[i], train_data, target, cv=5)))  for i in range(0, len(knn_manhat))]\n",
+    "\n",
     "knn_euclid_scores = [cross_validate(estimator=knn_euclid[i], X=train_data, y=target, cv=5, scoring=scoring) for i in range(0, len(knn_euclid))]\n",
+    "knn_euclid_cost_scores = [compute_cost(confusion_matrix(target, cross_val_predict(knn_euclid[i], train_data, target, cv=5)))  for i in range(0, len(knn_euclid))]\n",
     "\n",
     "table = tt.Texttable()\n",
-    "table.add_rows([['Results for Manhattan KNN', '', '', '', ''],\n",
-    "                ['Value of K', 'Accuracy', 'F-measure', 'Recall', 'Precision']\n",
+    "table.add_rows([['Results for Manhattan KNN', '', '', '', '', ''],\n",
+    "                ['Value of K', 'Accuracy', 'F-measure', 'Recall', 'Precision', 'Cost']\n",
     "])\n",
     "\n",
     "for i in range(0, len(knn_manhat_scores)):\n",
-    "    table.add_row( ['k=' + str(i+1), mean(knn_manhat_scores[i]['test_accuracy']), mean(knn_manhat_scores[i]['test_f1']), mean(knn_manhat_scores[i]['test_recall']), mean(knn_manhat_scores[i]['test_precision']) ])\n",
+    "    table.add_row( ['k=' + str(i+1), mean(knn_manhat_scores[i]['test_accuracy']), mean(knn_manhat_scores[i]['test_f1']), mean(knn_manhat_scores[i]['test_recall']), mean(knn_manhat_scores[i]['test_precision']), knn_manhat_cost_scores[i] ])\n",
     "print(table.draw())\n",
+    "print()\n",
     "\n",
     "table = tt.Texttable()\n",
-    "table.add_rows([['Results for Euclidean KNN', '', '', '', ''],\n",
-    "                ['Value of K', 'Accuracy', 'F-measure', 'Recall', 'Precision']\n",
+    "table.add_rows([['Results for Euclidean KNN', '', '', '', '',''],\n",
+    "                ['Value of K', 'Accuracy', 'F-measure', 'Recall', 'Precision', 'Cost']\n",
     "])\n",
     "for i in range(0, len(knn_euclid_scores)):\n",
-    "    table.add_row( ['k=' + str(i+1), mean(knn_euclid_scores[i]['test_accuracy']), mean(knn_euclid_scores[i]['test_f1']), mean(knn_euclid_scores[i]['test_recall']), mean(knn_euclid_scores[i]['test_precision']) ])\n",
+    "    table.add_row( ['k=' + str(i+1), mean(knn_euclid_scores[i]['test_accuracy']), mean(knn_euclid_scores[i]['test_f1']), mean(knn_euclid_scores[i]['test_recall']), mean(knn_euclid_scores[i]['test_precision']), knn_euclid_cost_scores[i] ])\n",
     "print(table.draw())"
    ]
   },
@@ -438,16 +466,11 @@
     "***\n",
     "## Section: 3.3 - Evaluate the choice of the KNN classifier\n",
     "- What characteristics of the problem and data made KNN a good or bad choice?\n",
-    "***"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Overall, my KNN classsifier produced excellent results."
+    "***\n",
+    "\n",
+    "Overall, KNN seems to work reasonably well for the data set. However, this is my initial findings as I have not yet run tests with the other two classifiers.\n",
+    "\n",
+    "KNN might not be the best fit for this dataset as the numbers are all over the place. Additionally, we have a larger number of dimensions here with 5 different attributes, so this could cause problems for the model when we start trying to use it to predict the class of new data. Our attributes also are across a wide variety of various measurement systems, so the data varies pretty dramatically in magnitude. I fixed this with normalization, but it is still something to keep in mind when choosing the final classifier."
    ]
   },
   {
@@ -472,11 +495,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "For my second classifier;"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
